# hippobox

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  release-please-config.json  renovate.json
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml  security-audit.yml
bench/: run.sh
shims/rename_shim/: Cargo.toml
shims/rename_shim/src/: imp.rs  lib.rs
src/: image.rs  main.rs  platform.rs
src/container/: cgroups.rs  cleanup.rs  env.rs  init.rs  mod.rs  mounts.rs  namespaces.rs  net.rs  parse.rs  process.rs  rootfs.rs  rootless.rs  seccomp.rs  spec.rs  util.rs  volumes.rs
src/container/linux/: cleanup.rs  init.rs  mod.rs  mounts.rs  process.rs
src/container/windows/: mod.rs
src/image/: manifest.rs  mod.rs  ref_parser.rs
src/registry/: auth.rs  extract.rs  manifest.rs  mod.rs
src/registry/extract/: linux.rs  mod.rs
