[workspace]
members = [".", "shims/rename_shim"]

[package]
name = "hippobox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
nix = { version = "0.31", features = ["mount", "sched", "signal", "process", "hostname", "fs", "user"] }
seccompiler = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[dev-dependencies]
tempfile = "3.27.0"
