[workspace]
members = [".", "shims/rename_shim"]

[package]
name = "hippobox"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight Linux container manager using raw Linux primitives"
repository = "https://github.com/teh-hippo/hippobox"
keywords = ["container", "linux", "oci", "rootless", "namespaces"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = ["bench/", ".github/", ".githooks/", "renovate.json", ".gitignore"]

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "help", "usage", "error-context", "std"] }
flate2 = "1"
nix = { version = "0.31", default-features = false, features = ["mount", "sched", "signal", "process", "hostname", "fs", "user"] }
seccompiler = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
tar = { version = "0.4", default-features = false }
ureq = { version = "3", default-features = false, features = ["rustls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.27.0"
