[workspace]
members = [".", "shims/rename_shim"]

[package]
name = "hippobox"
version = "0.3.3"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight OCI container manager"
repository = "https://github.com/teh-hippo/hippobox"
keywords = ["container", "oci", "rootless", "namespaces", "windows"]
categories = ["command-line-utilities"]
exclude = ["bench/", ".github/", ".githooks/", "renovate.json", ".gitignore"]

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "help", "usage", "error-context", "std"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
tar = { version = "0.4", default-features = false }
ureq = { version = "3", default-features = false, features = ["rustls"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["mount", "sched", "signal", "process", "hostname", "fs", "user"] }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.27.0"
